deleting unnecesary components

--- a/src/app/components/Buttons/PrimaryButton.module.css
+++ b/src/app/components/Buttons/PrimaryButton.module.css
@@ -3,6 +3,10 @@
   color: black;
   text-wrap: nowrap;
   background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
 }
 
 .container:hover {
