--- a/src/app/components/Buttons/ActionButton.module.css
+++ b/src/app/components/Buttons/ActionButton.module.css
@@ -2,6 +2,10 @@
   border-radius: var(--size-4);
   text-wrap: nowrap;
   background: var(--color-button-primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
 }
 
 .container:hover {
