--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -16,9 +16,13 @@
 }
 
 .logout {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
   border-top: solid #c7c7c7 1px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   border-radius: 100%;
   background: var(--background-gradient-color);
 }
