--- a/src/root.css
+++ b/src/root.css
@@ -10,6 +10,8 @@
   --color-light-grey: #BEBEBE;
   --color-button-primary: #38B6FF;
   --color-button-primary-hover: #54c0ff;
+  --color-dark: #2f2f2f;
+  --color-darker: #1a1a1c;
 
   --background-color-dark: #1a1a1c;
   --background-color-light: #2f2f2f;
