--- a/src/app/components/Browser/EmptyBrowser.module.css
+++ b/src/app/components/Browser/EmptyBrowser.module.css
@@ -8,6 +8,12 @@
   overflow-y: auto;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
   background-color: rgb(38, 38, 38); 
+}
+
+.createContainer {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
