--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -1,4 +1,49 @@
+.container ul {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .buttonContainer {
   gap: 1rem;
   display: flex;
+  width: 100%;
+}
+
+.imgContainer {
+  width: 10rem;
+  height: 10rem;
+  background-color: var(--background-color-dark);
+  border-radius: 100%;
+  border: dashed;
+  border-color: var(--color-dark);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+  transition-duration: .3s;
+}
+
+.imgContainer:hover {
+  border-color: var(--color-primary);
+}
+
+.plusContainer {
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+  background-color: var(--color-primary);
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: .3rem;
+}
+
+.previewImage {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 8px;
 }
