--- a/src/globals.css
+++ b/src/globals.css
@@ -48,6 +48,7 @@ ul {
   padding: 0;
   display: flex;
   list-style: none;
+  flex-direction: column;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -87,6 +88,12 @@ li {
 
 label {
   color: white;
+  font-size: small;
+  background-color: var(--color-dark  );
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-inline: 1rem;
+  font-weight: bold;
 }
 
 input {
@@ -94,9 +101,13 @@ input {
   padding: .5rem;
   border-radius: 5px;
   border: none;
-  color: rgb(0, 0, 0);
-  background-color: white;
+  color: white;
+  background-color: var(--color-dark);
   border-bottom: 1px solid var(--color-button-primary);
+}
+
+input[type="file"] {
+  cursor: pointer;
 }
 
 button {
@@ -120,7 +131,7 @@ input:active,
 input:focus,
 input:focus-visible {
   outline: none;
-  background-color: var(--color-button-primary-hover);
+  background-color: var(--color-darker);
   color: white;
 }
 
