--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -23,7 +23,6 @@
   cursor: pointer;
   position: relative;
   transition-duration: .3s;
-  overflow: hidden;
 }
 
 .imgContainer:hover {
@@ -44,5 +43,6 @@
 
 .previewImage {
   width: 100%;
+  border-radius: 100%;
   object-fit: cover;
 }
