--- a/src/globals.css
+++ b/src/globals.css
@@ -87,7 +87,7 @@ li {
 }
 
 label {
-  color: white;
+  color: var(--color-light);
   font-size: small;
   background-color: var(--color-dark  );
   border-top-left-radius: 5px;
@@ -101,7 +101,7 @@ input {
   padding: .5rem;
   border-radius: 5px;
   border: none;
-  color: white;
+  color: var(--color-light);
   background-color: var(--color-dark);
   border-bottom: 1px solid var(--color-button-primary);
 }
@@ -111,7 +111,7 @@ input[type="file"] {
 }
 
 button {
-  color: white;
+  color: var(--color-light);
   padding: .5rem;
   border: none;
   outline: none;
@@ -132,7 +132,7 @@ input:focus,
 input:focus-visible {
   outline: none;
   background-color: var(--color-darker);
-  color: white;
+  color: var(--color-light);
 }
 
 main {
