--- a/src/root.css
+++ b/src/root.css
@@ -12,6 +12,7 @@
   --color-button-primary-hover: #54c0ff;
   --color-dark: #2f2f2f;
   --color-darker: #1a1a1c;
+  --color-light: #adadad;
 
   --background-color-dark: #1a1a1c;
   --background-color-light: #2f2f2f;
