--- a/src/root.css
+++ b/src/root.css
@@ -13,6 +13,7 @@
   --color-dark: #2f2f2f;
   --color-darker: #1a1a1c;
   --color-light: #adadad;
+  --color-lighter: #dfdfdf;
 
   --background-color-dark: #1a1a1c;
   --background-color-light: #2f2f2f;
