--- a/src/app/components/Forms/LoginForm.module.css
+++ b/src/app/components/Forms/LoginForm.module.css
@@ -1,18 +1,15 @@
 .container {
-  flex-direction: column;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .inputContainer {
-  justify-content: space-between;
-}
-
-.inputContainer label {
-  width: 120px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-
-.inputContainer input {
+  gap:0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
