--- a/src/root.css
+++ b/src/root.css
@@ -13,7 +13,7 @@
   --color-dark: #2f2f2f;
   --color-darker: #1a1a1c;
   --color-light: #adadad;
-  --color-lighter: #dfdfdf;
+  --color-lighter: #e4e4e4;
 
   --background-color-dark: #1a1a1c;
   --background-color-light: #2f2f2f;
