--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -49,6 +49,15 @@
 
 .inputContainer {
   gap: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.inputContainer label {
+  display: flex;
+}
+
+.inputContainer input {
+  width: 100%;
 }
