--- a/src/app/components/Forms/LoginForm.module.css
+++ b/src/app/components/Forms/LoginForm.module.css
@@ -6,10 +6,17 @@
 }
 
 .inputContainer {
-  gap:0;
+  gap: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+}
+
+.inputContainer label {
+  width: 100%;
+  display: flex;
+}
+
+.inputContainer input {
+  width: 100%;
 }
