--- a/src/globals.css
+++ b/src/globals.css
@@ -105,6 +105,8 @@ label {
 input {
   width: 100%;
   padding: .5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   border: none;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
