--- a/src/globals.css
+++ b/src/globals.css
@@ -107,8 +107,8 @@ label {
 input {
   width: 100%;
   padding: .5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: .3rem;
+  padding-bottom: .3rem;
   border: none;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
