--- a/src/app/components/Forms/LoginForm.module.css
+++ b/src/app/components/Forms/LoginForm.module.css
@@ -1,6 +1,8 @@
 .container {
+  gap: 1rem;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
