--- a/src/app/components/Forms/LoginForm.module.css
+++ b/src/app/components/Forms/LoginForm.module.css
@@ -5,8 +5,10 @@
   flex-direction: column;
   align-items: start;
   padding-inline: 1rem;
+  text-align: center;
 }
 
 .container p {
-  font-weight: 200;
+  font-weight: 400;
+  text-align: start;
 }
