--- a/src/app/components/Browser/EmptyBrowser.module.css
+++ b/src/app/components/Browser/EmptyBrowser.module.css
@@ -12,8 +12,8 @@
 }
 
 .createContainer {
-  padding: 1rem;
+  gap: 1rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
