--- a/src/app/components/Browser/EmptyBrowser.module.css
+++ b/src/app/components/Browser/EmptyBrowser.module.css
@@ -14,6 +14,8 @@
 .createContainer {
   gap: 1rem;
   width: 100%;
+  padding-top: 2rem;
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
