--- a/src/app/components/Forms/LoginForm.module.css
+++ b/src/app/components/Forms/LoginForm.module.css
@@ -1,11 +1,11 @@
 .container {
   gap: 1rem;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
   padding-inline: 2rem;
+  display: flex;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .container p {
