--- a/src/globals.css
+++ b/src/globals.css
@@ -70,7 +70,8 @@ h3 {
 }
 
 form {
-  width: 340px;
+  width: 100%;
+  max-width: 500px;
   gap: var(--size-3);
   padding: var(--size-6);
   border-radius: var(--size-1);
