--- a/src/globals.css
+++ b/src/globals.css
@@ -37,11 +37,6 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 ul {
   gap: var(--size-3);
   margin: 0;
@@ -94,15 +89,10 @@ li {
   justify-content: center;
 }
 
-a {
-  cursor: pointer;
-  font-weight: bolder;
-}
-
 label {
   color: var(--color-light);
   font-size: small;
-  background-color: var(--color-dark  );
+  background-color: var(--color-dark);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   padding-top: .1rem;
@@ -192,8 +182,10 @@ i {
 }
 
 a {
-  color: rgb(206, 206, 206);
+  color: var(--color-primary);
   padding: 0;
+  cursor: pointer;
+  font-weight: bolder;
   text-decoration: none;
 }
 
