--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -49,8 +49,8 @@
 .previewImageContainer {
   width: 10rem;
   height: 10rem;
+  padding: .1rem;
   border-radius: 100%;
-  object-fit: cover;
   overflow: hidden;
 }
 
