--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -49,15 +49,13 @@
 .previewImageContainer {
   width: 10rem;
   height: 10rem;
-  padding: .1rem;
   border-radius: 100%;
   overflow: hidden;
 }
 
 .previewImage {
   width: 100%;
-  aspect-ratio: 1;
-  object-fit: cover;
+  aspect-ratio: 1/1;
 }
 
 .inputContainer {
