--- a/src/app/components/Buttons/PrimaryButton.module.css
+++ b/src/app/components/Buttons/PrimaryButton.module.css
@@ -1,13 +1,14 @@
 .container {
-  border-radius: var(--size-4);
-  color: black;
-  text-wrap: nowrap;
-  background-color: var(--color-light);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   gap: .5rem;
   width: 100%;
+  max-width: 500px;
+  display: flex;
+  color: black;
+  text-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--size-4);
+  background-color: var(--color-light);
 }
 
 .container:hover {
