--- a/src/app/components/Buttons/ActionButton.module.css
+++ b/src/app/components/Buttons/ActionButton.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  max-width: 500px;
   border-radius: var(--size-4);
   text-wrap: nowrap;
   background: var(--color-button-primary);
