--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -48,14 +48,17 @@
 }
 
 .previewImageContainer {
-  width: 10rem;
-  height: 10rem;
+  width: 100%;
+  height: 100%;
   border-radius: 100%;
+  display: flex;
   overflow: hidden;
+  align-items: center;
+  justify-content: center;
 }
 
 .previewImage {
-  width: 100%;
+  object-fit: cover;
   aspect-ratio: 1/1;
 }
 
