--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -18,7 +18,7 @@
 .imgContainer {
   width: 10rem;
   height: 10rem;
-  padding: 1rem;
+  padding: .1rem;
   border-radius: 100%;
   transition-duration: .3s;
   display: flex;
