--- a/src/app/components/Buttons/AddProjectButton.module.css
+++ b/src/app/components/Buttons/AddProjectButton.module.css
@@ -1,8 +1,8 @@
 .container {
   margin: 0;
   padding: 0;
-  width: 50px;
-  height: 50px;
+  width: 3rem;
+  height: 3rem;
   border-radius: 100%;
   border: none;
   display: flex;
