--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -1,36 +1,31 @@
 .container {
   gap: 1rem;
   height: 100%;
-  min-height: 100vh;
-  padding: .6rem;
+  min-height: 100%;
+  padding: 0;
   padding-top: .25rem;
+  padding-bottom: .25rem;
   display: flex;
   align-items: center;
   flex-direction: column;
-  overflow-y: auto;
 }
 
 .projects {
-  flex-direction: column;
+  padding: 0;
+  padding-inline: .3rem;
   height: 100%;
+  flex-direction: column;
 }
 
-.logout {
-  width: 40px;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  justify-content: center;
-  border-top: solid #c7c7c7 1px;
-  border-radius: 100%;
-  background: var(--background-gradient-color);
-  border: solid .15rem;
-  border-color: var(--color-button-primary-hover);
+.account {
+  padding: 0;
+  padding-inline: .3rem;
+  width: 100%;
 }
 
-.logout:hover {
-  cursor: pointer;
-  border-color: var(--color-button-primary-hover);
+.versionContainer {
+  width: 100%;
+  padding-inline: .3rem;
 }
 
 .version {
@@ -38,8 +33,9 @@
   font-weight: 600;
   border: solid 1px var(--color-light);
   border-radius: 30px;
-  width: 38px;
+  width: 100%;
   font-size: 11px;
   display: flex;
+  padding-inline: .3rem;
   justify-content: center;
 }
