--- a/src/globals.css
+++ b/src/globals.css
@@ -255,10 +255,11 @@ a:hover {
   width: 100vw;
   height: 100vh;
   display: flex;
+  position: absolute;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
+  background: var(--background-gradient-color);
 }
 
 .dashboard-sections {
