--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -5,7 +5,6 @@
   padding: 1rem;
   border-top-left-radius: 10px;
   display: flex;
-  overflow-y: auto;
   align-items: center;
   flex-direction: column;
   background-color: rgb(38, 38, 38); 
@@ -44,7 +43,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  border-color: var(--color-dark);
+  border-color: var(--color-dark-400);
   background-color: var(--background-color-dark);
 }
 
