--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -1,13 +1,21 @@
 .container {
-  gap: 1rem;
-  height: 100%;
-  min-height: 100%;
+  gap: .5rem;
   padding: 0;
-  padding-top: .25rem;
-  padding-bottom: .25rem;
+  height: 100%;
+  flex-direction: column;
   display: flex;
   align-items: center;
-  flex-direction: column;
+  padding-bottom: 1rem;
+}
+
+.iconContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.iconContainer img {
+  cursor: pointer;
 }
 
 .projects {
@@ -30,9 +38,9 @@
 }
 
 .version {
-  color: var(--color-light);
+  color: var(--color-light-300);
   font-weight: 600;
-  border: solid 1px var(--color-light);
+  border: solid 1px var(--color-light-300);
   border-radius: 30px;
   width: 100%;
   font-size: 11px;
