--- a/src/globals.css
+++ b/src/globals.css
@@ -13,7 +13,7 @@
 }
 
 .h-full {
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 html,
@@ -23,18 +23,20 @@ body {
 
 p {
   font-weight: 500;
-  color: var(--color-light-grey);
+  color: var(--color-light-300);
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 ul {
@@ -54,22 +56,22 @@ ul {
 
 h1 {
   font-size: var(--size-12);
-  color: var(--color-light-grey);
+  color: var(--color-light-300);
 }
 
 h2 {
   font-size: var(--size-9);
-  color: var(--color-light-grey);
+  color: var(--color-light-300);
 }
 
 h3 {
   font-size: var(--size-6);
-  color: var(--color-light-grey);
+  color: var(--color-light-300);
 }
 
 h4 {
   font-size: var(--size-4);
-  color: var(--color-light-grey);
+  color: var(--color-light-300);
 }
 
 form {
@@ -98,9 +100,9 @@ li {
 }
 
 label {
-  color: var(--color-light);
+  color: var(--color-light-300);
   font-size: small;
-  background-color: var(--color-dark);
+  background-color: var(--color-dark-400);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   padding-top: .1rem;
@@ -117,10 +119,10 @@ input {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   transition-duration: .4s;
-  color: var(--color-light);
+  color: var(--color-light-300);
   border: none;
-  background-color: var(--color-dark);
-  border-bottom: 1px solid var(--color-light);
+  background-color: var(--color-dark-400);
+  border-bottom: 1px solid var(--color-light-300);
 }
 
 input[type="file"] {
@@ -132,8 +134,8 @@ input:active,
 input:focus,
 input:focus-visible {
   outline: none;
-  background-color: var(--color-darker);
-  color: var(--color-light);
+  background-color: var(--color-dark-800);
+  color: var(--color-light-300);
 }
 
 input:focus {
@@ -141,7 +143,8 @@ input:focus {
 }
 
 button {
-  color: var(--color-light);
+  color: var(--color-light-300);
+  background-color: var(--color-light-400);
   padding: .5rem;
   border: none;
   outline: none;
@@ -159,35 +162,41 @@ main {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   max-width: var(--max-width);
   display: flex;
   flex-direction: column;
   background: var(--background-color-light);
 }
 
-.icon-container {
-  width: 3.8rem;
-  display: flex;
-  justify-content: center;
-}
+.project-viewer {
+  width: 100%;
+  margin-bottom: 1.6rem;
 
-.icon-container img {
-  cursor: pointer;
 }
 
 .header-app {
   display: flex;
   align-items: center;
   width: 100%;
+  height: 25px;
 }
 
 .title-container {
+  gap: .5rem;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: center;
-  color: var(--color-light-grey);
+  color: var(--color-light-200);
   font-weight: bold;
+}
+
+.title-container img {
+  width: 15px;
+  height: 15px;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
 }
 
 i {
@@ -232,7 +241,8 @@ a:hover {
 
 .dashboard-container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  overflow-y: auto;
   display: flex;
   background: var(--background-color-light);
 }
@@ -266,6 +276,10 @@ a:hover {
   width: 100%;
   height: 100%;
   display: flex;
+  border: solid .5px var(--color-dark-300);
+  border-right: none;
+  border-bottom: none;
+  border-top-left-radius: 10px;
 }
 
 .logo {
