--- a/src/app/components/LateralMenu/LateralMenu.module.css
+++ b/src/app/components/LateralMenu/LateralMenu.module.css
@@ -66,6 +66,14 @@
   align-items: center;
 }
 
+.section {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--color-light-300);
+}
+
 .menuList li:hover {
   cursor: pointer;
   color: rgb(222, 222, 222);
