--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -22,8 +22,12 @@
 .container span {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   border-radius: 100%;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .image {
