adding selected to current project

--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -19,6 +19,11 @@
   border-color: var(--color-primary);
 }
 
+.selected {
+  border: solid .1rem;
+  border-color: var(--color-primary);
+}
+
 .container span {
   width: 100%;
   height: 100%;
