--- a/src/app/components/Modals/DeleteProjectModal.module.css
+++ b/src/app/components/Modals/DeleteProjectModal.module.css
@@ -19,7 +19,8 @@
 }
 
 .buttonContainer {
-  display: flex;
-  width: 100%;
   gap: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
