--- a/src/app/components/Buttons/PrimaryButton.module.css
+++ b/src/app/components/Buttons/PrimaryButton.module.css
@@ -14,3 +14,8 @@
 .container:hover {
   color: white;
 }
+
+.container:disabled:hover {
+  color: black;
+  background-color: var(--color-light-300);
+}
