--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -1,26 +1,21 @@
 .container {
-  max-width: 500px;
   margin: 0;
-  padding: .1rem;
   width: 50px;
   height: 50px;
+  padding: .1rem;
+  max-width: 500px;
+  border-radius: 100%;
+  transition-duration: .1s;
   border: none;
   display: flex;
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  border-radius: 100%;
-  transition-duration: .1s;
   background-color: var(--color-dark-800);
 }
 
-.container:hover {
+.container span:hover {
   border: solid .1rem;
-  border-color: var(--color-primary);
-}
-
-.selected {
-  border: solid .2rem;
   border-color: var(--color-primary);
 }
 
@@ -32,7 +27,12 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
+  
+}
 
+.selected {
+  border: solid .2rem;
+  border-color: var(--color-primary);
 }
 
 .image {
