--- a/src/app/components/Browser/Browser.module.css
+++ b/src/app/components/Browser/Browser.module.css
@@ -1,7 +1,38 @@
 .container {
   width: 100%;
-  height: 100%;
-  display: grid;
-  overflow-y: auto;
-  background-color: rgb(47, 47, 47);
+  background-color: var(--color-dark-400);
+}
+
+.location {
+  gap: .5rem;
+  width: 100%;
+  height: 40px;
+  border-radius: 0;
+  padding: .5rem;
+  font-size: 1rem;
+  padding-inline: 1rem;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border-bottom: solid .5px var(--color-dark-300);
+  color: var(--color-light-300);
+}
+
+.folder {
+  padding: 0 4px;
+  color: var(--color-link);
+}
+
+.breadcrumb {
+  color: var(--color-link);
+  cursor: pointer;
+  padding: 0 4px;
+  display: flex;
+  align-items: center;
+}
+
+.separator {
+  gap: .5rem;
+  display: flex;
+  align-items: center;
 }
