--- a/src/app/components/Browser/EmptyBrowser.module.css
+++ b/src/app/components/Browser/EmptyBrowser.module.css
@@ -8,7 +8,7 @@
   overflow-y: auto;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(38, 38, 38); 
+  background-color: var(--color-dark-900);
 }
 
 .createContainer {
