--- a/src/app/components/Browser/Browser.module.css
+++ b/src/app/components/Browser/Browser.module.css
@@ -6,10 +6,10 @@
 .location {
   gap: .5rem;
   width: 100%;
-  height: 40px;
+  height: 2rem;
   border-radius: 0;
   padding: .5rem;
-  font-size: 1rem;
+  font-size: .8rem;
   padding-inline: 1rem;
   display: flex;
   align-items: center;
