--- a/src/app/components/Buttons/ProfileButton.module.css
+++ b/src/app/components/Buttons/ProfileButton.module.css
@@ -1,5 +1,5 @@
 .container {
-  position: relative;
+  display: flex;
 }
 
 .canvas {
@@ -12,6 +12,10 @@
   position: absolute;
   background-color: var(--color-dark-400);
   transition-duration: .4s;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .canvas:hover {
@@ -32,21 +36,29 @@
 
 .profileButtonContainer {
   gap: 1rem;
-  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.profileButtonContainer button{
+.profileButtonContainer button {
   padding: .3rem;
   padding-inline: 1.6rem;
   color: white;
 }
 
 .profileButton {
-  width: 2.2rem;
+  max-width: 38px;
   display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+.profileButton img {
+  display: flex;
+  width: 100%;
+  max-width: 2.2rem;
   overflow: hidden;
   align-items: center;
   justify-content: center;
@@ -55,9 +67,5 @@
   background: var(--background-gradient-color);
   border: solid .15rem;
   border-color: var(--color-button-primary-hover);
-}
-
-.profileButton:hover {
   cursor: pointer;
-  border-color: var(--color-button-primary-hover);
 }
