--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -2,6 +2,7 @@
   gap: .5rem;
   padding: 0;
   height: 100%;
+  padding-inline: .3rem;
   flex-direction: column;
   display: flex;
   align-items: center;
@@ -21,15 +22,9 @@
 .projects {
   padding: 0;
   padding-top: .5rem;
-  padding-inline: .3rem;
   height: 100%;
   flex-direction: column;
-}
-
-.account {
-  padding: 0;
-  padding-inline: .3rem;
-  width: 100%;
+  overflow-y: auto;
 }
 
 .versionContainer {
@@ -45,6 +40,26 @@
   width: 100%;
   font-size: 11px;
   display: flex;
-  padding-inline: .3rem;
+  justify-content: center;
+}
+
+.user {
+  gap: .3rem;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top: solid 1px var(--color-light-400);
+  border-radius: .3rem;
+}
+
+.user li {
+  width: 100%;
+  min-height: 2.5rem;
+  display: flex;
+  position: relative;
+  align-items: center;
   justify-content: center;
 }
