--- a/src/app/components/Buttons/ProfileButton.module.css
+++ b/src/app/components/Buttons/ProfileButton.module.css
@@ -14,8 +14,10 @@
   transition-duration: .4s;
   min-width: 100%;
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
+  z-index: 9;
 }
 
 .canvas:hover {
