--- a/src/app/components/LateralMenu/LateralMenu.module.css
+++ b/src/app/components/LateralMenu/LateralMenu.module.css
@@ -1,10 +1,7 @@
 .container {
+  min-width: 100%;
   gap: 1rem;
-  min-width: 250px;
-  border-top-left-radius: 10px;
   background-color: var(--color-dark-900);
-  border-right: solid .5px var(--color-dark-300);
-  border-bottom: none;
   overflow: hidden;
 }
 
@@ -26,7 +23,8 @@
   background-color: transparent;
   border-bottom: solid .5px var(--color-dark-300);
   color: var(--color-light-300);
-  cursor: pointer;;
+  cursor: pointer;
+  ;
 }
 
 .projectActionsContainer {
