--- a/src/globals.css
+++ b/src/globals.css
@@ -287,14 +287,41 @@ a:hover {
   width: 100%;
   height: 100%;
   display: flex;
+  border-top-left-radius: 10px;
   border: solid .5px var(--color-dark-300);
   border-right: none;
   border-bottom: none;
-  border-top-left-radius: 10px;
+  overflow: hidden;
 }
 
 .logo {
   animation: fadeInOut 3s ease-in-out infinite;
+}
+
+.lateral-menu {
+  gap: 1rem;
+  min-width: 250px;
+  background-color: var(--color-dark-900);
+  border-right: solid .5px var(--color-dark-300);
+  border-bottom: none;
+  overflow: hidden;
+  display: flex;
+}
+
+.lateral-menu-route {
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-dark-900);
+  border-bottom: none;
+  overflow: hidden;
+  display: flex;
+}
+
+@media screen and (max-width: 1024px) {
+  .lateral-menu {
+    display: none;
+  }
 }
 
 @keyframes fadeInOut {
