formateando json para enviar prescripción a la api

--- a/src/app/components/LateralMenu/LateralMenu.module.css
+++ b/src/app/components/LateralMenu/LateralMenu.module.css
@@ -1,5 +1,11 @@
+@media screen and (min-width: 1024px) {
+  .container {
+    max-width: 250px;
+  }
+}
+
 .container {
-  min-width: 100%;
+  width: 100%;
   gap: 1rem;
   background-color: var(--color-dark-900);
   overflow: hidden;
