--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -16,6 +16,7 @@
   border-radius: 10px;
   background-color: var(--color-dark-300);
   display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
