styling & adding route for edit project instead modal

--- a/src/app/components/Browser/Browser.module.css
+++ b/src/app/components/Browser/Browser.module.css
@@ -7,8 +7,11 @@
 
 .content {
   height: 100%;
+  padding: 1rem;
+  display: flex;
   overflow-y: auto;
-  padding-bottom: 1rem;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .location {
