--- a/src/app/components/Forms/UpdateProjectForm.module.css
+++ b/src/app/components/Forms/UpdateProjectForm.module.css
@@ -1,11 +1,15 @@
 .container {
   width: 100%;
+  max-width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
   display: flex;
+  align-items: center;
   flex-direction: column;
+  background-color: var(--color-dark-300);
 }
 
 .container ul {
-  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -13,10 +17,11 @@
 
 .buttonContainer {
   gap: 1rem;
+  width: 100%;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  width: 100%;
   display: flex;
+  justify-content: center;
 }
 
 .imgContainer {
