--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -1,19 +1,8 @@
 .container {
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  border-top-left-radius: 10px;
-}
-
-.detailsContainer {
   gap: 3rem;
   width: 100%;
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 1rem;
   background-color: var(--color-dark-300);
   display: flex;
   justify-content: center;
