--- a/src/app/components/Forms/DeleteProjectForm.module.css
+++ b/src/app/components/Forms/DeleteProjectForm.module.css
@@ -6,6 +6,6 @@
 .buttonContainer {
   gap: 1rem;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
