--- a/src/app/components/LateralTab/LateralTab.module.css
+++ b/src/app/components/LateralTab/LateralTab.module.css
@@ -63,3 +63,12 @@
   align-items: center;
   justify-content: center;
 }
+
+.archive {
+  cursor: pointer;
+  transition-duration: .4s;
+}
+
+.archive:hover {
+  color: var(--color-light-100);
+}
