--- a/src/app/components/Start/Start.module.css
+++ b/src/app/components/Start/Start.module.css
@@ -5,6 +5,7 @@
   padding: 1rem;
   display: flex;
   overflow-y: auto;
+  text-align: center;
   align-items: center;
   flex-direction: column;
   background-color: var(--color-dark-900);
@@ -17,4 +18,40 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.createContainer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.createContainer ul li {
+  gap: 1rem;
+  padding: 1rem;
+  padding-inline: 3rem;
+  border-radius: 1rem;
+  background-color: var(--color-dark-300);
+  cursor: pointer;
+  display: flex;
+}
+
+.createContainer ul li:hover {
+  background-color: var(--color-dark-200);
+}
+
+.projectImageContainer {
+  border-radius: 100%;
+  width: 60px;
+  aspect-ratio: 1/1;
+  border: solid 3px;
+  border-color: var(--color-button-primary-hover);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projectImage {
+  height: 100%;
 }
