--- a/src/app/components/Start/Start.module.css
+++ b/src/app/components/Start/Start.module.css
@@ -14,6 +14,7 @@
 .createContainer {
   gap: 1rem;
   width: 100%;
+  max-width: 1024px;
   padding-top: 2rem;
   display: flex;
   align-items: center;
@@ -21,28 +22,42 @@
 }
 
 .createContainer ul {
-  display: flex;
-  flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
 
 .createContainer ul li {
   gap: 1rem;
   padding: 1rem;
-  padding-inline: 3rem;
+  padding-inline: 2rem;
   border-radius: 1rem;
   background-color: var(--color-dark-300);
   cursor: pointer;
   display: flex;
+  justify-content: space-between;
 }
 
 .createContainer ul li:hover {
   background-color: var(--color-dark-200);
 }
 
+.box {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.box h3 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .projectImageContainer {
   border-radius: 100%;
-  width: 60px;
+  width: 28px;
   aspect-ratio: 1/1;
   border: solid 3px;
   border-color: var(--color-button-primary-hover);
