--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -11,26 +11,26 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-dark-800);
+  background-color: transparent;
 }
 
 .container span:hover {
-  border: solid .1rem;
-  border-color: var(--color-primary);
+  background-color: var(--color-primary);
 }
 
 .container span {
-  width: 100%;
   height: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 100%;
   display: flex;
   overflow: hidden;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
 }
 
 .selected {
-  border: solid .2rem;
+  border: solid .15rem;
   border-color: var(--color-primary);
 }
 
@@ -38,8 +38,12 @@
   height: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
+  opacity: .7;
 }
 
 .defaultImage {
+  color: white;
   opacity: .7;
+  font-weight: 900;
+  font-size: 1.4rem;
 }
