--- a/src/app/components/Start/Start.module.css
+++ b/src/app/components/Start/Start.module.css
@@ -25,7 +25,7 @@
   gap: 1rem;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
 .createContainer ul li {
@@ -65,8 +65,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: 900;
+  color: white;
+  opacity: .7;
 }
 
 .projectImage {
   height: 100%;
+}
+
+.createContainer ul .createProject {
+  background-color: transparent;
+  border: dashed .2rem;
+  justify-content: center;
 }
