--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -11,7 +11,7 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  background-color: transparent;
+  background-color: var(--color-dark-200);
 }
 
 .container span:hover {
@@ -26,7 +26,8 @@
   display: flex;
   overflow: hidden;
   align-items: center;
-  justify-content: center;  
+  justify-content: center; 
+  padding: .5rem;
 }
 
 .selected {
