--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -26,7 +26,7 @@
   display: flex;
   overflow: hidden;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   padding: .5rem;
 }
 
@@ -47,4 +47,5 @@
   opacity: .7;
   font-weight: 900;
   font-size: 1.4rem;
+  text-transform: uppercase;
 }
