--- a/src/app/components/Backgrounds/Background.module.css
+++ b/src/app/components/Backgrounds/Background.module.css
@@ -2,7 +2,9 @@
   gap: 1rem;
   width: 100%;
   height: 100%;
+  min-height: 20rem;
   display: flex;
+  text-align: center;
   align-items: center;
   flex-direction: column;
   justify-content: center;
