--- a/src/app/components/Buttons/ProjectButton.module.css
+++ b/src/app/components/Buttons/ProjectButton.module.css
@@ -8,7 +8,7 @@
   transition-duration: .1s;
   border: none;
   display: flex;
-  overflow: hidden;
+  position: relative;
   align-items: center;
   justify-content: center;
   background-color: var(--color-dark-200);
@@ -48,4 +48,19 @@
   font-weight: 900;
   font-size: 1.4rem;
   text-transform: uppercase;
+}
+
+.dbTypeIcon {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: var(--color-dark-400);
+  border-radius: 50%;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+  color: var(--color-primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--color-primary);
 }
