--- a/src/app/components/Forms/CreateProjectForm.module.css
+++ b/src/app/components/Forms/CreateProjectForm.module.css
@@ -78,3 +78,30 @@
   object-fit: cover;
   aspect-ratio: 1/1;
 }
+
+.labeledSelect {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.labeledSelect label {
+  font-size: .9rem;
+  color: var(--color-light-200);
+}
+
+.selectInput {
+  width: 100%;
+  padding: .7rem 1rem;
+  border-radius: .5rem;
+  border: 1px solid var(--color-dark-400);
+  background-color: var(--background-color-dark);
+  color: var(--color-light-200);
+  font-size: 1rem;
+  outline: none;
+}
+
+.selectInput:focus {
+  border-color: var(--color-primary);
+}
