--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -106,3 +106,7 @@
   justify-content: center;
   border: 1px solid var(--color-primary);
 }
+
+.borderAnimate {
+  border: dashed var(--color-primary);
+}
