--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -108,5 +108,27 @@
 }
 
 .borderAnimate {
-  border: dashed var(--color-primary);
+  border: 2px solid var(--color-primary);
+  position: relative;
+  overflow: hidden; /* Para que el pseudo-elemento no se desborde */
+}
+
+.borderAnimate::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%; /* Empieza fuera del elemento */
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, transparent, var(--color-secondary), transparent); /* Gradiente de escaneo */
+  animation: scanBorder 2s linear infinite;
+}
+
+@keyframes scanBorder {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
 }
