--- a/src/app/components/Forms/UpdateProjectForm.module.css
+++ b/src/app/components/Forms/UpdateProjectForm.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   flex-direction: column;
   background-color: var(--color-dark-300);
+  position: relative;
 }
 
 .container ul {
