--- a/src/app/components/Spinner/Spinner.module.css
+++ b/src/app/components/Spinner/Spinner.module.css
@@ -9,13 +9,13 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
-  border-radius: 8px; /* Match form border-radius if applicable */
+  border-radius: 1rem;
 }
 
 .spinner {
   border: 4px solid #f3f3f3; /* Light grey */
   border-top: 4px solid var(--color-primary); /* Blue */
-  border-radius: 50%;
+  border-radius: 1rem;
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
