--- a/src/app/components/Spinner/Spinner.module.css
+++ b/src/app/components/Spinner/Spinner.module.css
@@ -15,7 +15,7 @@
 .spinner {
   border: 4px solid #f3f3f3; /* Light grey */
   border-top: 4px solid var(--color-primary); /* Blue */
-  border-radius: 1rem;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
