--- a/src/app/components/DbInfo/DbInfo.module.css
+++ b/src/app/components/DbInfo/DbInfo.module.css
@@ -1,6 +1,8 @@
 .container {
-  padding-inline: 1rem;
+  width: 100%;
+  display: flex;
   position: relative;
+  justify-content: flex-end;
 }
 
 .modalContent {
@@ -27,6 +29,7 @@
   cursor: pointer;
   font-size: 0.9rem;
   border-radius: 5px;
+  margin-right: 1rem;
   align-items: center;
   color: var(--color-light-100);
   background-color: transparent;
