--- a/src/app/components/DbInfo/DbInfo.module.css
+++ b/src/app/components/DbInfo/DbInfo.module.css
@@ -43,3 +43,18 @@
   color: var(--color-primary);
   transition: .4s;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.refreshButton {
+  cursor: pointer;
+}
+
+.refreshButton:hover {
+  color: var(--color-primary);
+  transition: .4s;
+}
