--- a/src/app/components/Cards/ExportCard.module.css
+++ b/src/app/components/Cards/ExportCard.module.css
@@ -1,10 +1,13 @@
 .box {
   gap: 1rem;
+  width: 100%;
   display: flex;
+  overflow: hidden;
   align-items: center;
 }
 
-.box h3 {
+.title {
+  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
