--- a/src/app/components/Start/Start.module.css
+++ b/src/app/components/Start/Start.module.css
@@ -11,6 +11,12 @@
   background-color: var(--color-dark-900);
 }
 
+.projectCardSkeleton {
+  width: 100%;
+  height: 60px;
+  border-radius: 1rem;
+}
+
 .createContainer {
   gap: 1rem;
   width: 100%;
@@ -29,11 +35,11 @@
 }
 
 .createContainer ul li {
-  width: 100%;
   gap: 1rem;
+  width: 100%;
   padding: 1rem;
-  padding-inline: 2rem;
   border-radius: 1rem;
+  padding-inline: 2rem;
   background-color: var(--color-dark-300);
   cursor: pointer;
   display: flex;
